2013-11-11  Carl Hetherington  <cth@carlh.net>

	* Version 1.28 released.

2013-11-11  Carl Hetherington  <cth@carlh.net>

	* Somewhat speculative fix for slow-downs and
	large memory consumption with multi-content playlists.

2013-11-10  Carl Hetherington  <cth@carlh.net>

	* Hopefully get rid of spurious black lines around
	preview.

2013-11-08  Carl Hetherington  <carl@ubuntu>

	* Fix strange behaviour of J2K bandwidth control
	on 32-bit Linux.

2013-11-07  Carl Hetherington  <cth@carlh.net>

	* Open file dialog starts in the configured DCP directory,
	if one exists (#70).

2013-11-06  Carl Hetherington  <cth@carlh.net>

	* Support pixel format 30 (#254).

2013-11-06  Carl Hetherington  <cth@carlh.net>

	* Version 1.27 released.

2013-11-06  Carl Hetherington  <cth@carlh.net>

	* Various server-related tidying up; servers are
	now auto-detected only (the configuration for
	them has been removed).

2013-11-06  Carl Hetherington  <cth@carlh.net>

	* Version 1.26 released.

2013-11-05  Carl Hetherington  <cth@carlh.net>

	* Auto-detect encoding servers on the local
	subnet(s).

	* Tweak verbosity of command-line encoding servers.

2013-11-04  Carl Hetherington  <cth@carlh.net>

	* Version 1.25 released.

2013-10-29  Carl Hetherington  <cth@carlh.net>

	* Improve performance when start-trimming
	large files.

	* Fix audio problems when start-trimming.

2013-10-28  Carl Hetherington  <cth@carlh.net>

	* Version 1.24 released.

2013-10-28  Carl Hetherington  <cth@carlh.net>

	* Fix failure to reload configuration on
	some non-English locales.

2013-10-26  Carl Hetherington  <cth@carlh.net>

	* Version 1.23 released.

2013-10-25  Carl Hetherington  <cth@carlh.net>

	* Version 1.22 released.

2013-10-24  Carl Hetherington  <cth@carlh.net>

	* Support sources that require repeat of more than
	1 extra frame.

2013-10-23  Carl Hetherington  <cth@carlh.net>

	* Version 1.21 released.

2013-10-23  Carl Hetherington  <cth@carlh.net>
