@@ -1,3 +1,8 @@
+2013-11-12  Carl Hetherington  <cth@carlh.net>
+
+	* Fix bad_alloc exception on audio analysis (and
+	probably elsewhere).
+
 2013-11-11  Carl Hetherington  <cth@carlh.net>
 
 	* Version 1.28 released.
